--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/style.css">
-  <link rel="shortcut icon" href="imagens/navbar-logo.svg" type="image/x-icon">
+  <link rel="shortcut icon" href="img/navbar-logo.svg" type="image/x-icon">
   <title>OptimusTech</title>
 </head>
 
@@ -87,7 +87,7 @@
         <p>Somos uma equipe 100% remota com pessoas do Brasil inteiro.</p>
       </div>
 
-      <img class="vagas__banner" src="/img/banner.svg" alt="Banner de vagas abertas">
+      <img class="vagas__banner" src="img/banner.svg" alt="Banner de vagas abertas">
 
       <!-- CARDS -->
       <div class="vagas-cards">
